--- a/css/account.less
+++ b/css/account.less
@@ -373,6 +373,16 @@
   padding-left: 42px;
   position: relative;
   margin-top: 20px;
+
+  &.public {
+    border: none;
+    margin-top: 0;
+    padding-top: 0;
+
+    .list-dot {
+      top: 7px;
+    }
+  }
 }
 
 .list-dot {
