Layout for iphone 5

--- a/css/global.less
+++ b/css/global.less
@@ -1215,6 +1215,7 @@ i, em {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
+  margin-bottom: 12px;
 }
 
 .search-options {
@@ -1572,6 +1573,12 @@ i, em {
   @import "global768.less";
   .container-fluid {
     width: 768px;
+  }
+}
+
+@media all and (max-width: 736px) {
+  .container-fluid {
+    width: 100%;
   }
 }
 
