--- a/css/global414.less
+++ b/css/global414.less
@@ -1,4 +1,370 @@
+.container-fluid {
+  width: 100%;
+}
+
+.static-page-header .static-page-title {
+  left: 25px;
+}
+
 .account-content {
   padding-left: 0;
   padding-right: 0;
+}
+
+.header-menu {
+  text-align: center;
+}
+
+.header-menu-link {
+  text-align: center;
+  display: inline-block;
+  margin-bottom: 10px;
+  margin-left: 2em;
+}
+
+.who-is-behind-item {
+  width: 100%;
+}
+
+.who-is-behind-image {
+  text-align: center;
+
+  img {
+    max-width: 80%;
+  }
+}
+
+.footer-menu-item {
+  margin-bottom: 10px;
+  display: inline-block;
+}
+
+.settings-phones .col-sm-12 {
+  width: 100%;
+}
+
+.settings-phones > .row {
+  margin-bottom: 20px;
+}
+
+.willing-to-travel-switcher-container .col-sm-12 {
+  width: 100%;
+}
+
+.switcher-description {
+  width: 100%;
+  margin-top: 14px;
+}
+
+.travel-range-slider-container {
+  height: 22px;
+}
+
+.settings-payments .col-sm-12 {
+  width: 100%;
+}
+
+.checkor {
+  margin-top: -20px;
+}
+
+.account-footer-controll .col-sm-12 {
+  width: 100%;
+}
+
+.account-step-privacy-info {
+  padding-bottom: 20px;
+}
+
+.account-footer-button-container {
+
+  .btn {
+    width: 100%;
+  }
+}
+
+.width50 {
+  width: 100%;
+}
+
+.account-container-gray {
+  padding: 0 20px;
+}
+
+.account-footer-button-container {
+  margin-top: 20px;
+}
+
+.profile-container {
+  width: 100%;
+}
+
+.chef-about-info {
+  width: 100%;
+  padding-left: 20px;
+}
+
+.tab-links-container {
+  text-align: center;
+  display: block;
+  li {
+    display: inline-block;
+    float: left;
+    height: 50px;
+    width: 50%;
+  }
+}
+
+.prising .col-sm-12 {
+  width: 100%;
+}
+
+.exp-ranking .col-sm-6 {
+  width: 50%;
+  text-align: center;
+  float: left;
+}
+
+.experience-workflow-item {
+  padding-bottom: 30px;
+
+  .post-action {
+    bottom: 0;
+    top: auto;
+  }
+}
+
+.dissmiss-new-experience {
+  width: 100%;
+  display: block;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.save-new-experience {
+  margin: 0;
+  width: 100%;
+}
+
+.account-container {
+  margin: 0;
+}
+
+.account-menu {
+  padding: 0;
+}
+
+.add-menu-button {
+  margin-right: 0;
+}
+
+.account-menu-item {
+  padding: 10px 20px;
+}
+
+.account-settings-footer-section .col-sm-12 {
+  width: 100%;
+
+  .save-account-info {
+    width: 100%;
+    margin-top: 15px;
+  }
+}
+
+.account-container-gray {
+  width: 100%;
+  margin: 0 auto;
+
+  .col-sm-12 {
+    width: 100%;
+  }
+}
+
+.added-menu-item {
+  margin-bottom: 30px;
+}
+
+.message-pre-approve {
+  float: none;
+  width: 100%;
+}
+
+.message-time {
+  display: block;
+  margin-top: 7px;
+}
+
+.ui-datepicker.ui-widget .ui-datepicker-calendar tbody td {
+  height: 60px;
+}
+
+.ui-datepicker.ui-widget .ui-datepicker-calendar tbody td a, .ui-datepicker.ui-widget .ui-datepicker-calendar tbody td span {
+  text-align: left;
+}
+
+.ui-datepicker.ui-widget .ui-datepicker-calendar tbody td.booking-donea:after, .ui-datepicker.ui-widget .ui-datepicker-calendar tbody td.booking-done span:after {
+  left: 57%;
+  bottom: 3%;
+}
+
+.faq-tab-links {
+  margin-top: 30px;
+
+  li {
+    display: block;
+    float: left;
+    margin-right: 0;
+    width: 50%;
+    text-align: center;
+    padding-top: 10px;
+    height: 34px;
+  }
+}
+
+.article {
+  .faq-tab-links {
+    margin-top: 0;
+  }
+}
+
+.schedule-item {
+  margin: 0;
+  margin-top: 30px;
+}
+
+.add-account-select {
+  width: 100%;
+}
+
+.language-section {
+  width: 76%;
+}
+
+.faq-header-link {
+  display: block;
+  margin: 20px 0 0 0;
+}
+
+.coupons-content {
+  .col-sm-12 {
+    width: 100%;
+
+    &.text-center {
+      margin-top: 20px;
+      .btn {
+        width: 100%;
+      }
+    }
+  }
+}
+
+.account-content-section {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.kitchen-description-container {
+
+  .col-sm-6 {
+    width: 50%;
+    float: left;
+  }
+}
+
+.kitchen-photos .col-sm-12 {
+  float: left;
+}
+
+.kitchen-photos-buttons .col-sm-12 {
+  width: 100%;
+  margin-bottom: 20px;
+
+  .btn {
+    width: 100%;
+  }
+}
+
+.gift-next-step {
+  font-size: 14px;
+}
+
+.header-search-container {
+  display: block;
+}
+
+.header-search-input-block {
+  display: block;
+  width: 400px;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+
+.search-orange-line .col-sm-12:last-of-type {
+  margin-top: 10px;
+
+  input {
+    margin-left: 25px;
+  }
+}
+
+.search-chef-ranking {
+  width: 100%;
+}
+
+.search-currencies {
+  width: 50%;
+  text-align: left;
+  float: left;
+}
+
+.search-price-container {
+  width: 50%;
+  float: left;
+}
+
+#search-price-slider {
+  margin-top: 13px;
+}
+
+.search-filter-buttons {
+  margin-top: 90px;
+  .btn {
+    width: 100%;
+  }
+}
+
+.search-orange-line > div {
+  margin-top: 10px;
+}
+
+.header {
+
+  .col-lg-8, .col-lg-4 {
+    width: 414px;
+  }
+}
+
+.custom-modal-footer {
+
+  .btn {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+
+.pre-approve-tabs li {
+  width: 100%;
+  margin-bottom: 10px;
+
+  a {
+    height: 48px;
+
+    &.smaller-padding {
+      padding-top: 15px;
+    }
+  }
+}
+
+.approval-image {
 }
