--- a/css/global768.less
+++ b/css/global768.less
@@ -40,10 +40,6 @@
   margin-top: 20px;
 }
 
-.row-margin {
-  margin-top: 20px;
-}
-
 .featured-chef-item {
   margin-bottom: 20px;
 }
@@ -178,4 +174,9 @@
   .col-sm-12 {
     width: 33.333%;
   }
+}
+
+.close-modal {
+  right: 20px;
+  top: 20px;
 }
